--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint src",
-    "dev": "nodemon --exec 'babel-node server/index'",
+    "dev": "nodemon --exec babel-node server/index",
     "test": "npm run lint",
     "start": "nf start"
   },
@@ -34,7 +34,7 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "body-parser": "^1.17.1",
+    "body-parser": "^1.18.3",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "mongoose": "^4.6.8",
